The title 'Rooms & Rates' on a webster apartments page was not centered, especailly on smaller screens. This change fixes that.

--- a/themes/bene_parent/css/bene-style.css
+++ b/themes/bene_parent/css/bene-style.css
@@ -394,7 +394,7 @@ tbody td {
   background-size: cover;
   display: flex;
   justify-content: center;
-  width: 100vw;
+  width: auto;
   position: relative;
   z-index: 20; }
 
@@ -655,7 +655,6 @@ tbody td {
   padding: 70px 1.5rem 70px 1.5rem;
   position: relative;
   text-align: center;
-  width: 100vw;
   max-width: 100%;
   overflow: hidden; }
   .feature-full-width-paragraph .paragraph--type--feature-full-width:before {
