--- a/themes/bene_parent/sass/config/_01.vars.scss
+++ b/themes/bene_parent/sass/config/_01.vars.scss
@@ -427,7 +427,7 @@ $vars: (
   background-size: cover;
   display: flex;
   justify-content: center;
-  width: 100vw;
+  width: auto;
   position: relative;
   z-index: 20;
 }
@@ -738,7 +738,6 @@ $vars: (
   padding: 70px 1.5rem 70px 1.5rem;
   position: relative;
   text-align: center;
-  width: 100vw;
   max-width: 100%;
   overflow: hidden;
 
